--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ function HomePage({ setCurrentPage }) {
       {/* Hero Section */}
       <section
         className="relative w-full h-screen bg-cover bg-center flex items-center justify-center text-white"
-        style={{ backgroundImage: "url('https://placehold.co/1920x1080/D71F0F/FFFFFF?text=Majestic+Swiss+Alps')" }}
+        style= backgroundImage:url('https://placehold.co/1920x1080/D71F0F/FFFFFF?text=Majestic+Swiss+Alps')
       >
         <div className="absolute inset-0 bg-black opacity-40"></div>
         <div className="relative z-10 text-center p-6 max-w-4xl mx-auto">
